[tool.poetry]
name = "tfl-crowding"
version = "0.1.0"
description = ""
authors = ["c-abbott <cllmbbtt@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tfl_crowding"}]

[tool.poetry.dependencies]
python = "^3.10"
dagster = "^1.5.13"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
