[tool.dagster]
module_name = "dagster_tfl"

[tool.poetry]
name = "dagster_tfl"
version = "0.1.0"
description = ""
authors = ["c-abbott <cllmbbtt@gmail.com>"]
readme = "README.md"
packages = [{include = "dagster_tfl"}]

[tool.poetry.dependencies]
python = "^3.10"
dagster = "^1.5.13"
dagster-webserver = "^1.5.13"
duckdb = "^0.9.2"
dagster-dbt = "^0.21.13"
grpcio = {version = "^1.47.5", source = "grpcio"}


[[tool.poetry.source]]
name = "grpcio"
url = "https://github.com/dagster-io/build-grpcio/wiki/Wheels"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
